0.4.0:
Mo DeJong - Tue May 30 15:23:19 PDT 2000
 * Fixed an audio deadlock when stopping playback
Markus Overhumer - Tue May 30 15:16:30 PDT 2000
 * Some cleanups for compiling on Win32 with VC++
Vivien Chappelier - Fri May 26 10:53:44 PDT 2000
 * Added a movable progress slidebar to gtv
Vivien, Manuel - Wed May 17 17:36:39 PDT 2000
 * Added support for timestamp synchronization in the MPEG stream
Vivien, Damien - Mon May  8 11:06:08 PDT 2000
 * Added support for seeking in the MPEG stream
Sam Lantinga - Fri Apr 28 15:57:25 PDT 2000
 * Added support to plaympeg allowing the user to resize the window
Sam Lantinga - Fri Apr 28 14:22:14 PDT 2000
 * Added ALT-ENTER fullscreen toggle to plaympeg
Sam Lantinga - Thu Apr 27 18:22:04 PDT 2000
 * Added support for arbitrary output scaling:
	new API function SMPEG_scaleXY()
 * Added -scale wxh option to plaympeg
Sam Lantinga - Mon Apr 24 16:11:58 PDT 2000
 * A much improved semaphore based ring buffer implementation
Sam Lantinga, Ryan Gordon - Mon Apr 24 14:12:59 PDT 2000
 * plaympeg can now play files containing colons
Sam Lantinga - Tue Apr 18 17:12:16 PDT 2000
 * Adjusted the audio startup timing based on experimentation
Hiroshi Yamashita - Tue Apr 18 15:48:14 PDT 2000
 * Improved audio synchronization with longer movies (double rate_deal)
Sam Lantinga - Fri Apr 14 13:21:51 PDT 2000
 * Added support for SDL asynchronous blitting
 * Added support for FPS printing - see TIME_MPEG in video/MPEGvideo.cpp
Hiroshi Yamashita - Tue Apr 11 13:00:01 PDT 2000
 * Tuned MPEG_BUFFER_SIZE for slower systems.
Atsushi Yamagata - Tue Apr 11 12:50:45 PDT 2000
 * Added locale setting for gtv.
Hiroshi Yamashita - Tue Apr 11 09:59:11 PDT 2000
 * Fixed audio popping and floating point exceptions in layer2 audio.
Sam Lantinga - Tue Apr 11 06:55:53 PDT 2000
 * Ported to Win32.
Sam Lantinga - Sun Apr  9 16:42:47 PDT 2000
 * Use SDL 1.1.3 for hardware accelerated YUV overlay support.
Vivien Chappelier - Thu Apr  6 12:40:36 PDT 2000